corrected alignment on nav bar links

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -35,6 +35,7 @@
   font-size: 1.3em;
   list-style-type: none;
   position: relative;
+  align-items: center;
 }
 
 .navBar {
